docs(rmw-bf16): revise Phase 2a after re-vendor spike
Spike finding: HardFloat AddRecFN(8,8) does not elaborate (sigWidth=8 too
small for the stock adder core). Resolution: compute bf16 add in the FP32
domain (exact widen {bf16,16'h0} -> existing trusted FP32 AddRecFN -> RNE
narrow), which is exactly the Phase-1 golden's model and provably bit-exact
(double-rounding safe). int_to_bf16 uses the generated INToRecFN_i32_e8_s8 +
FNFromRecFN_bf16_wrapper. New combinational block fp32_to_bf16_rne is the one
new correctness-critical primitive. Java 17 builds Chisel 3.5.6 with --add-opens=.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>